<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Java Quiz</string>
    <string name="single_answer">The following questions have a single correct answer</string>
    <string name="multiple_answer">The following questions have multiple correct answers. Select the grading option from the menu:</string>
    <string name="multiple_answer_choices">Normal: Get a point only if you find all correct answers, without checking any extras.
        \nPartial 1: Get half a point for each correct answer. Get nothing if you select too many answers.
        \nPartial 2: Get half a point for each correct answer but get penalised for incorrect ones.</string>
    <string name="edited_answer">Please type your answer to the following questions</string>
    <string name="final_score_button">Check your answers</string>
    <string name="h9">Please type your answer here</string>
    <string name="h10">Please type your answer here</string>
    <string name="h11">Please type your answer here</string>
    <string name="h12">Please type your answer here</string>
    <string name="edited_answer_correct">Your answer is correct!</string>
    <string name="edited_answer_incorrect">The correct answer was: </string>
    <string name="timer_text">Time:</string>
    <string name="quiz_over">The quiz is over! You may scroll up and down to see the correct answers.</string>
    <string name="score">Score:</string>
    <string name="restart_button">Restart Quiz</string>
    <string name="splash_author_name">by @CosminC</string>
    <string name="about_button">About</string>
    <string name="go_back">Back to quiz</string>
    <string name="share_button">Share results</string>

    <string name="about_author_1">Copyright &#169; 2018 Cosmin Cojocea</string>
    <string name="about_author_2">Email:</string>
    <string name="about_author_3_mail">ccojocea@gmail.com</string>
    <string name="about_author_4">Licensed under: </string>
    <string name="about_author_5">&lt;a href=https://tldrlegal.com/license/mit-license#fulltext>The MIT License&lt;/a></string>

    <string name="font_license_1">The Shrikhand font:</string>
    <string name="font_license_2">Copyright &#169; 2015 Jonny Pinhorn</string>
    <string name="font_license_31_email_address">Email:</string>
    <string name="font_license_32_email_address" translatable="false">jonpinghorn.typedesign@gmail.com</string>
    <string name="font_license_4_SIL">This Font Software is licensed under: </string>
    <string name="font_license_5_web">&lt;a href=http://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&amp;id=OFL_web>SIL Open Font License, Version 1.1&lt;/a></string>
    
    <string name="logo_cc_1">Udacity logo and application icon are modified versions of:</string>
    <string name="logo_cc_2_link">&lt;a href=https://commons.wikimedia.org/wiki/File:Udacity_logo.png>The logo of Udacity&lt;/a></string>
    <string name="logo_cc_3">by Sebastian Thrun.</string>
    <string name="logo_cc_4_source">Source:</string>
    <string name="logo_cc_5_link" translatable="false">&lt;a href=http://www.udacity.com>Udacity&lt;/a></string>
    <string name="logo_cc_6_licensed">Licensed under:</string>
    <string name="logo_cc_7_link">&lt;a href=https://creativecommons.org/licenses/by-sa/4.0/deed.en/>CC Attribution-Share Alike 4.0&lt;/a></string>

    <string name="toast_all">Amazing! You\'ve got a perfect 12 out of 12 score!</string>
    <string name="toast_none">Not even one correct answer? Did you even try?</string>
    <string name="toast_one">At least you got one right! Your score is: 1 out of 12!</string>
    <string name="toast_few">At least you got some right! Your score is: <xliff:g id="score" example="2">%s</xliff:g> out of 12!</string>
    <string name="toast_8">Congratulations! You\'ve got most of the questions right! Your score is: <xliff:g id="score" example="2">%s</xliff:g> out of <xliff:g id="score">12</xliff:g>!"</string>
    <string name="toast_4">Not a great achievement but better than nothing! Your score is: <xliff:g id="score" example="2">%s</xliff:g> out of <xliff:g id="score">12</xliff:g>!</string>
    <string name="toast_several">Congratulations! You\'ve got most of the questions right! Your score is:<xliff:g id="score" example="2">%s</xliff:g> +" out of <xliff:g id="score">12</xliff:g>!";</string>

    <string name="confirm_message">Are you sure you want to submit your answers? The quiz will end!</string>
    <string name="dialog_number_of_questions_tv_none">You have not answered any questions.</string>
    <string name="dialog_number_of_questions_tv_some">You have not answered <xliff:g id="questions" example="2">%d</xliff:g> questions.</string>
    <string name="dialog_number_of_questions_tv_one">You have not answered one question.</string>
    <string name="dialog_number_of_questions_tv_all">You have answered all questions.</string>
    <string name="missed_questions">Missed questions:</string>
    <string name="one_missed_question">Missed question:</string>
    <string name="positive_button">Ok</string>
    <string name="negative_button">Cancel</string>

    <string name="grading_type">Choose grading type!</string>
    <string-array name="multiple_choice">
        <item>Normal grading - Binary score</item>
        <item>Partial grading 1</item>
        <item>Partial grading 2</item>
    </string-array>

    <string name="mail_subject">My score for Java Quiz</string>
    <string name="mail_message">I just played Java Quiz and I got a score of:</string>
    <string name="mail_message_2">Can you do better?</string>
    <string name="mail_message_3">Soon available on Google Play (Maybe!)</string>

</resources>
